button dropdown content aligned correctly

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -166,7 +166,7 @@
   display: block;
   color: rgb(17, 17, 17);
   cursor: pointer;
-  text-align: right;
+  text-align: left;
 }
 
 
@@ -180,7 +180,8 @@
   font-weight: 600;
   display: none;
   position: absolute;
-  right: 0;
+  justify-content: center;
+  right: 10;
   min-width: 120px;
   color: rgb(17, 17, 17);
   box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
